# OpenHarness_HyperFrames

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.e2e  Dockerfile.fix  Dockerfile.oh-test  Dockerfile.session-test  Dockerfile.test  README.md  _cmp_service.py  docker-compose.yml  sync_hyperframes_skills.sh
.github/workflows/: web.yml
OpenHarness/: Dockerfile-temp  Dockerfile.e2e  Dockerfile.fix  docker-compose-temp.yml  docker-compose.e2e.yml  fastapi.md  generate.py
OpenHarness/docs/: hyperframes-skill-openharness-patches.md
OpenHarness/e2e/: e2e_report_v8.txt  oh_stub.sh  run_e2e.sh
OpenHarness/scripts/: react_tui_e2e.py  smoke_video_service.sh
OpenHarness/service/: pyproject.toml
OpenHarness/service/alembic/: env.py
OpenHarness/service/alembic/versions/: 001_initial_video_tasks.py  003_storage_kind.py
OpenHarness/service/app/: main.py
OpenHarness/service/app/observability/: __init__.py  logging.py
OpenHarness/service/app/workers/: parser.py
OpenHarness/src/: DeepSeek_V3.2.pptx  generate.py  test.pptx
OpenHarness/tests/: test_real_large_tasks.py
docker/: supervisord.conf
docs/: hyperframes-skill-openharness-patches.md
e2e/: e2e_report_2026-07-21.txt  run-web-docker-smoke.sh  run-web-docker-tests.sh  run_e2e.sh
hyperframes_github_skills/embedded-captions/: SKILL.md
hyperframes_github_skills/faceless-explainer/: SKILL.md
hyperframes_github_skills/figma/: SKILL.md
hyperframes_github_skills/general-video/: SKILL.md
hyperframes_github_skills/hyperframes/: SKILL.md
hyperframes_github_skills/hyperframes-cli/: SKILL.md
hyperframes_github_skills/hyperframes-core/: SKILL.md
hyperframes_github_skills/hyperframes-creative/: SKILL.md
hyperframes_github_skills/media-use/: SKILL.md
hyperframes_github_skills/motion-graphics/: SKILL.md
hyperframes_github_skills/music-to-video/: SKILL.md
hyperframes_github_skills/pr-to-video/: SKILL.md
hyperframes_github_skills/product-launch-video/: SKILL.md
hyperframes_github_skills/remotion-to-hyperframes/: SKILL.md
hyperframes_github_skills/slideshow/: SKILL.md
plans/: Backend_Hardening_Fix_Plan_2026-07-21.md  Backend_Hardening_Fix_Plan_V3_2026-07-21.md  FastAPI_Hyperframes_Video_Service_3217f912.md  Interactive_Session_Service_原生REPL多轮对话_2026-07-23.md  Phase2_Multi-Instance_Scaling_3217f912.md  Phase3_Multi-Tenancy_Temporal_Lease_3217f912.md  Phase3_Review_2026-07-14.md  Web_Frontend_Fix_Plan_2026-07-23.md  集成Qwen_TTS.md
service/: API_DOCUMENTATION.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_V2.md  CODE_REVIEW_REPORT_V3.md  alembic.ini  pyproject.toml
service/alembic/: script.py.mako
service/alembic/versions/: 002_scale_multi_instance_columns.py  004_task_list_index.py
service/app/: config.py  db.py  deps.py  main.py  models.py  ratelimit.py  schemas.py  security.py
service/app/observability/: metrics.py  tracing.py
service/app/routers/: health.py  videos.py
service/app/storage/: base.py  local.py  s3.py
service/app/workers/: beat.py  celery_app.py  identity.py  parser.py  runner.py  scheduler.py  tasks.py
service/tests/: test_api_edge.py  test_beat.py  test_celery_app.py  test_cleanup.py  test_health.py  test_migrations.py  test_observability.py  test_parser.py  test_polish.py  test_ratelimit.py  test_runner.py  test_s3_storage.py  test_security.py  test_sse.py  test_streaming.py  test_videos_api.py  test_worker.py
session-service/: API_DOCUMENTATION.md  README.md  alembic.ini  pyproject.toml
session-service/alembic/: env.py
session-service/alembic/versions/: 001_initial_session_tables.py
session-service/app/: config.py  db.py  deps.py  main.py  models.py  ratelimit.py  schemas.py  security.py
session-service/app/observability/: logging.py  metrics.py  tracing.py
session-service/app/routers/: health.py  sessions.py  ws.py
session-service/app/session/: adapter.py  artifacts.py  lifecycle.py  logs.py  process.py  protocol.py  proxy.py  registry.py  supervisor.py
session-service/app/storage/: base.py  local.py  s3.py
session-service/scripts/: contract_smoke.py  oh_backend_stub.py
session-service/tests/: conftest.py  test_artifact.py  test_health.py  test_lifecycle.py  test_migrations.py  test_protocol.py  test_security.py  test_sessions_api.py  test_supervisor.py  test_ws.py
web/: .dockerignore  .env.example  CODE_REVIEW_REPORT.md  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  (+5 more)
(+184 files in other folders)
