[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oh-service"
version = "0.1.0"
description = "FastAPI Hyperframes video generation service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlalchemy[asyncio]>=2.0.0,<3",
    "asyncpg>=0.30.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    "alembic>=1.14.0,<2",
    "celery[redis]>=5.4.0,<6",
    "redis>=5.2.0,<6",
    "pydantic-settings>=2.6.0,<3",
    "sse-starlette>=2.1.0,<3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
