[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oh-session-service"
version = "0.1.0"
description = "Stateful multi-turn interactive session service bridging the native oh --backend-only protocol"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlalchemy[asyncio]>=2.0.0,<3",
    "asyncpg>=0.30.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    "alembic>=1.14.0,<2",
    "redis>=5.2.0,<6",
    "pydantic-settings>=2.6.0,<3",
    "sse-starlette>=2.1.0,<3",
    "python-multipart>=0.0.9",
    # WebSocket support ships with uvicorn[standard] / starlette; websockets is
    # pulled in transitively but pinned explicitly for clarity.
    "websockets>=13.0,<14",
    # --- storage (mirror service/) ---
    "boto3>=1.34.0,<2",
    "botocore>=1.34.0,<2",
    # --- observability (mirror service/) ---
    "prometheus-client>=0.20.0,<1",
    "structlog>=24.0.0,<25",
    "psutil>=6.0.0,<7",
    "opentelemetry-api>=1.27.0,<1.28",
    "opentelemetry-sdk>=1.27.0,<1.28",
    "opentelemetry-exporter-otlp>=1.27.0,<1.28",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-redis==0.48b0",
    # --- http client for transparent reverse-proxy forwarding (Phase 3) ---
    "httpx>=0.27.0,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
