[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oh-service"
version = "0.1.0"
description = "FastAPI Hyperframes video generation service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlalchemy[asyncio]>=2.0.0,<3",
    "asyncpg>=0.30.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    "alembic>=1.14.0,<2",
    "celery[redis]>=5.4.0,<6",
    "redis>=5.2.0,<6",
    "pydantic-settings>=2.6.0,<3",
    "sse-starlette>=2.1.0,<3",
    "python-multipart>=0.0.9",
    # --- scale-multi-instance Phase 3: S3-compatible object storage ---
    "boto3>=1.34.0,<2",
    "botocore>=1.34.0,<2",
    # --- Phase 4: observability (metrics / traces / structured logs) ---
    # NOTE: tracing (OpenTelemetry) is OPTIONAL + defensive — if these packages
    # are missing the service still boots with OTLP off (see observability/tracing.py).
    "prometheus-client>=0.20.0,<1",
    "structlog>=24.0.0,<25",
    "psutil>=6.0.0,<7",
    "opentelemetry-api>=1.27.0,<1.28",
    "opentelemetry-sdk>=1.27.0,<1.28",
    "opentelemetry-exporter-otlp>=1.27.0,<1.28",
    # Instrumentation packages are released on the 0.4x (beta) line paired with
    # the 1.27 core; pin explicitly so pip selects the prerelease.
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-celery==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-redis==0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
testpaths = ["../../tests/service"]
asyncio_mode = "auto"
